# euklid_rd

./: .gitignore  .pylintrc  Cargo.toml  LICENCE  README.md  build.sh  compare.py  demo.ipynb  pyproject.toml  requirements.txt  support.md
.github/workflows/: maturin.yml  pylint.yml  pytest.yml  rstest.yml
src/: lib.rs  vector.rs  vector_rs.rs
src/plane/: mod.rs  plane.rs  plane_struct.rs
src/polyline/: mod.rs  polyline.rs  polyline_2d.rs
src/spline/: basis.rs  curve.rs  mod.rs
src/vector/: mod.rs  transform.rs  vector.rs
tests/: base.py  test_curve.py  test_euklid.py  test_euklid_plane.py  test_euklid_vector.py  test_hello_world.py  test_plane.py  test_polyline.py  test_transform.py  test_vector.py
