[package]
name = "euklid_rs"
version = "0.1.0"
authors = ["Simon Klemenc <simon@airg.family>", "Daniel Naschberger <daniel@naschi.at>"]
description = "A Rust module with bindings for python to help dealing with common CAD-like operations like Vectors, PolyLines and Spline Curves."
edition = "2021"

[lib]
name = "euklid_rs"
crate-type = ["cdylib"]

[dependencies]
nalgebra = "*"
pyo3 = { version = "0.16.5", features = ["multiple-pymethods"] }

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]